Proper party integration and async map loading.